Fix server sidebar not collapsing on small screens

--- a/app/(main)/server/[serverId]/components/ServerSidebar/styles.module.scss
+++ b/app/(main)/server/[serverId]/components/ServerSidebar/styles.module.scss
@@ -14,6 +14,14 @@
   }
 }
 
+.hidden {
+  display: none;
+
+  @include large-screen {
+    display: flex;
+  }
+}
+
 .nav {
   padding: 0.5rem;
   overflow-y: auto;
